<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/recipelogobackground">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/appLogo"
        android:src="@drawable/recipelogo" />

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appLogo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <!-- Search Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSearch"
        style="@style/CircularButtonStyle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        android:contentDescription="@string/search" />

    <!-- Add Recipe Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddRecipe"
        style="@style/CircularButtonStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/addRecipe"
        android:textAlignment="center"
        app:icon="@drawable/add_recipe"
        app:iconGravity="textStart" />

    <!-- View Recipes Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewRecipes"
        style="@style/CircularButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/view"
        app:iconGravity="textStart"
        android:contentDescription="@string/view" />

    <!-- Settings Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSettings"
        style="@style/CircularButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        android:contentDescription="@string/settings" />

</RelativeLayout>
