<!-- res/layout/activity_login.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/recipelogobackground">

    <!-- Username Field -->
    <EditText
        android:id="@+id/LoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginUsername"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginPassword"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:backgroundTint="@color/yellow"/>

    <!-- Create Account Button -->
    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="30dp"
        android:text="@string/createAccount"
        android:backgroundTint="@color/red"/>

</RelativeLayout>
