<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <!-- Recipe Name -->
    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/recipeName"
        android:textSize="18sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@android:color/black" />

    <!-- Edit Button -->
    <Button
        android:id="@+id/btnEditRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/edit"
        android:textColor="@android:color/white" />

    <!-- Delete Button -->
    <Button
        android:id="@+id/btnDeleteRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textColor="@android:color/white" />
</LinearLayout>
